@@ -3,6 +3,7 @@ Release date: May 29, 2023
 * Enhancement: Content Reveal - Added Default State option to show revealed content on page load
 * Enhancement: Content Reveal - Reveal button hides when number of lines of content is less than the visible lines set in the settings
 * Enhancement: Image Accordion - Added option to disable body click action
+* Fixed: Logo Carousel - Arrows style options were not working
 
 == 2.7.5 ==
 Release date: May 2, 2023
